--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -120,4 +120,6 @@ r.LightPropagationVolume=False
 
 [/Script/EngineSettings.GameMapsSettings]
 GlobalDefaultGameMode=/Script/TheRollingSphere.Sphere_GM
+EditorStartupMap=/Game/Maps/DEBUG_Level.DEBUG_Level
+GameDefaultMap=/Game/Maps/DEBUG_Level.DEBUG_Level
 
