Some changes & Working NextLevelTrigger

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -120,6 +120,6 @@ r.LightPropagationVolume=False
 
 [/Script/EngineSettings.GameMapsSettings]
 GlobalDefaultGameMode=/Script/TheRollingSphere.Sphere_GM
-EditorStartupMap=/Game/Maps/DEBUG_Level.DEBUG_Level
-GameDefaultMap=/Game/Maps/DEBUG_Level.DEBUG_Level
+EditorStartupMap=/Game/Maps/Level_1.Level_1
+GameDefaultMap=/Game/Maps/Level_1.Level_1
 
