--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -122,4 +122,5 @@ r.LightPropagationVolume=False
 GlobalDefaultGameMode=/Script/TheRollingSphere.Sphere_GM
 EditorStartupMap=/Game/Maps/Level_1.Level_1
 GameDefaultMap=/Game/Maps/Level_1.Level_1
+bUseSplitscreen=True
 
